feat: moved command to the end of executor and renamed it to "params"